# motor_control

./: .casillas.cpp.swp  .gitignore  .motor_driver.hpp.swp  CMakeLists.txt  Makefile  README.md  _makefile  bench  benchmark_getMotorCounter.cpp  camera_controller.hpp  casillas.cpp  casillas_2.cpp  encoder.hpp  encoder_v1.cpp  encoder_v1.hpp  encoder_v3.hpp  goal_keeper.cpp  kinematic_model.hpp  line_follower.cpp  main  main.cpp  mock_encoder.hpp  mock_encoder_manager.hpp  motor_calibration  motor_calibration.cpp  motor_control.hpp  motor_driver.hpp  omega_output.txt  pid_controler.hpp  pid_controller.hpp  pwm  pwm.cpp  takephoto.cpp  test_3_motor  test_3_motor.cpp  test_camera.cpp  test_camera_controller.cpp  test_encoder  test_encoder.cpp  test_encoder_v3  (+10 more)
camera_control/: CMakeLists.txt  ball_detection.cpp  line_detection.cpp  reddetection.cpp  takevideo.cpp
control/: encoder.h
include/: camera.h  config.h  control.h  encoder.h  imageprocessor.cpp  imageprocessor.h  interaction.h  motor.h  motor.hpp  pd.h  pid.h  robot.h  timing.h  velocity.h  vision.h
include/image/: color_extractor.hpp  image.hpp
include/kasilas/: ball_calibation.h  ball_calibration.cpp  ball_detection.cpp  ball_detection.h  kasilas.h  kinematic.h  pixel_to_centimeter_scale_calibration.cpp
include/line_follower/: vision_pid.hpp
include/motor/: encoder.hpp  motor.hpp  motor_control.hpp  motor_pid.hpp  motor_state.hpp  motorcontroller.hpp  motorstate.hpp  pid.hpp
include/navigation/: kinematic_model.hpp  line_follower.hpp  navigation.hpp  orientation_pid.hpp  vision.hpp
include/vision/: .camera.hpp.swp  .color_extractor.hpp.swp  camera.hpp  color_extractor.hpp  contour_analyzer.hpp  image_postprocessor.hpp  image_preprocessor.hpp  image_processor.hpp  image_processor_helper.hpp  vision.hpp
light_control/: lampe.cpp
modal/: Makefile  a.out  asser  asser.c  assermot.cpp  asservit  asservit.c  asservitrob.cpp  asservitrobiii.cpp  boutmot.c  camera  camera.cpp  camerarob.cpp  def.h  define.h  dilatation  dilatation.cpp  dilavecbarres  dilavecbarres.cpp  doublebouton.c  encoooodeur.c  exa  exe  gpio.sh  hehe.c  moteur.c  motled.c  pontH.c  rd.c  rechbary.cpp  rechseuil.cpp  servo.c  servoled.c
motor_control_v1/: .motor_test.cpp.swp  .pid_motor_control.cpp.swp  .red_line_bot.cpp.swp  CMakeLists.txt  Makefile  PID.cpp  measuring_motor_speed  measuring_motor_speed.cpp  moteur  moteur.cpp  moteur_1  moteur_1.cpp  motor_test.cpp  motortry  motortry.cpp  pid_motor_control.cpp  red_line_bot.cpp  red_line_bot.cpp.save  red_line_bot.cpp.save.1  servo.cpp  test  test.cpp
motor_control_v1/motor_control/encoder/: Makefile  encoder.h  motor_calibration  motor_calibration.cpp  test_encoder  test_encoder.cpp
pwm_testing/: Makefile  calibration  calibration.cpp  calibration_results.txt  encoder.hpp  motor_individual_tests.txt  run_calibration_tests.sh
test/: .test_encoder.cpp.swp  .test_encoder3.cpp.swp  .test_vision.cpp.swp  takephoto.cpp  test_binarymask.cpp  test_control_separation.cpp  test_encoder  test_encoder.cpp  test_encoder3.cpp  test_imageprocessor.cpp  test_motor.cpp  test_motor_driver.cpp  test_motor_separate.cpp  test_motorcontroller.cpp  test_multimotorcontroller.cpp  test_set_direction  test_vision.cpp  test_wiringi2c.cpp  testcontour.cpp
